dodanie zawartości do strony i podstron

--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
+/* === Ogólne === */
+
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     background-color: black;
     color: white;
 }
+
+/* === Zawartość strony === */
 
 .container {
     display: grid;
@@ -15,24 +19,38 @@ body {
     ;
 }
 
+/* === napis AleksDev === */
+
+.mainPage:hover {
+    cursor: pointer;
+}
+
+/* === główny nagłówek strony === */
 header {
     display: flex;
     grid-area: header;
     background-color: rgb(19, 19, 19); 
-    border-bottom: solid 4px #1e1e1ec7; 
+    border-bottom: solid 4px #1e1e1ec7;
+    padding-left: 60px; 
 }
 
 header button {
-    background-color: black;
+    background-color: rgb(19, 19, 19); 
     color: white;
     border: none;
+    font-size: 1.3rem;
+    margin-right: 10px;
 }
 
+
+
 header button:hover {
-    background-color: black;
+    background-color: rgb(19, 19, 19); 
     color: white;
     border: none;
     cursor: pointer;
+    border-bottom: solid 4px #2dd310;
+    padding: 6px;
 }
 
 .headerLeftSide {
@@ -40,26 +58,51 @@ header button:hover {
 }
 
 .headerCenter {
-    width: 26%;
+    width: 10%;
 }
 
 .headerRightSide {
-    width: 40%;
-    justify-content: right;
-    align-items: right;
+    display: flex;
+    width: 58%;
+    justify-content: center;
+    align-items: center;
 }
 
 h1, h2 {
     color: #39FF14;
 }
 
+.h1Center {
+    text-align: center;
+}
+
+/* === Część główna strony === */
+
 main {
     grid-area: main;
     border: solid 2px #1e1e1ec7;
+    padding-left: 20px;
 }
+
+/* === Stópka strony === */
 
 footer {
     grid-area: footer;
     border: solid 2px #1e1e1ec7;
     text-align: center;
+    padding: 20px;
+}
+
+footer a{
+    margin: 8px;
+    color: blue;
+}
+
+footer a:hover{
+    color: rgb(10, 10, 200);
+    cursor: pointer;
+}
+
+.hidden {
+    display: none;
 }
